--- a/css/style.css
+++ b/css/style.css
@@ -282,27 +282,36 @@ ul {
 }
 
 .hero-button {
-  border-radius: 50%;
-
-  background: #ffffff;
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: absolute;
   right: 8px;
   top: 8px;
   margin-left: 8px;
-
+  
   width: 30px;
   height: 30px;
-
+  
+  border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  background: #ffffff;
+
+
+}
+
+.hero-link:hover{
+  fill: #2196f3;
 }
 
 .hero-icon {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  transition: fill var(--animation);
 }
 
 /* Стили для форм */
@@ -323,6 +332,7 @@ textarea {
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
+  outline: none;
 }
 
 .form-text{
@@ -360,9 +370,13 @@ textarea {
   box-sizing: border-box;
   border-radius: 4px;
   cursor: pointer;
+  outline: none;
+
+  transition: fill var(--animation);
 }
 
 .form-field{
+  position: relative;
   display: flex;
   flex-direction: column;
   width: 448px;
@@ -380,7 +394,7 @@ textarea {
 
 .form-field input {
   margin: 0;
-  padding-left: 30px
+  padding-left: 42px;
 }
 
 
@@ -394,12 +408,11 @@ textarea {
   line-height: 1.71;
 }
 
-.input-policy{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-left: 0;
-} 
+.form-link{
+  color: #2196f3;
+}
+
+
 
 .form-button{
   font-family: inherit;
@@ -423,6 +436,110 @@ textarea {
   border-radius: 4px;
   cursor: pointer;
 }
+
+.form-icon-1{
+  position: absolute;
+  top: 50%;
+  left: 12px;
+
+  display: inline-block;
+  cursor: pointer;
+
+  transition: fill var(--animation);
+}
+
+.form-icon-2{
+  position: absolute;
+  top: 50%;
+  left: 12px;
+
+  display: inline-block;
+
+  transition: fill var(--animation);
+}
+
+.form-icon-3{
+  position: absolute;
+  top: 50%;
+  left: 12px;
+
+  display: inline-block;
+
+  transition: fill var(--animation);
+}
+
+.form-icon-1:focus{
+  fill: #2196f3;
+}
+
+.form-icon-2:focus{
+  fill: #2196f3;
+}
+
+.form-icon-3:focus{
+  fill: #2196f3;
+}
+
+.form-input:focus{
+  border-color: #2196f3;
+}
+
+.form-input:focus + .form-icon-1 {
+  fill: #2196f3;
+}
+
+.form-input:focus + .form-icon-2 {
+  fill: #2196f3;
+}
+
+.form-input:focus + .form-icon-3 {
+  fill: #2196f3;
+}
+
+.input-policy{
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+
+  position: absolute;
+}
+
+.input-policy:checked ~ .checkbox-icon{
+  background-image: url(../icons/icon-check.svg);
+  background-color: #2196f3;
+  background-size: contain;
+
+} 
+
+.label{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.checkbox-icon{
+  margin-bottom: 6px;
+  width: 16px;
+  height: 15px;
+  border-radius: 2px;
+  background-color: #2196f3;
+  fill: #FFFFFF;
+}
+
+.checkbox-icon-1{
+  margin-bottom: 6px;
+  width: 16px;
+  height: 15px;
+  border-radius: 2px;
+  background-color: #2196f3;
+  fill: #FFFFFF;
+}
+
+.checkbox-icon-1{
+
+  fill: #fff;
+
+} 
 
 /* Стили для форм(Footer) */
 
@@ -458,11 +575,15 @@ textarea {
   display: block;
   width: 358px;
   height: 50px;
+  padding-left: 16px;
 
-  border: 1px solid rgba(33, 33, 33, 0.2);
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3); 
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   box-sizing: border-box;
   border-radius: 4px;
   cursor: pointer;
+  outline: none;
 }
 
 .form-field-footer{
@@ -473,6 +594,9 @@ textarea {
 }
 
 .form-button-footer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
@@ -480,7 +604,7 @@ textarea {
 
   width: 200px;
   height: 50px;
-  margin-top: 30px;
+  margin-top: 36px;
   margin-left: 12px;
   padding-top: 10px;
   padding-right: 55px;
@@ -494,6 +618,14 @@ textarea {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+}
+
+.footer-icon{
+  display: inline-block;
+  fill: #FFFFFF;
+
+  margin-left: 10px;
+  margin-top: 10px;
 }
 
 /* section */
