--- a/css/style.css
+++ b/css/style.css
@@ -547,11 +547,11 @@ textarea {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 358px;
+  /* width: 358px; */
 
   margin-left: auto;
-  margin-right: 215px;
-  margin-bottom: 100px;
+    /* margin-right: 200px; */
+  /* margin-bottom: 100px;  */
 
 }
 
@@ -561,6 +561,7 @@ textarea {
   text-align: left;
   font-family: inherit;
   margin-bottom: 20px;
+  margin-left: 93px;
 
   font-weight: 700;
   font-size: 14px;
@@ -576,6 +577,7 @@ textarea {
   width: 358px;
   height: 50px;
   padding-left: 16px;
+  margin-left: 93px;
 
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3); 
@@ -589,7 +591,7 @@ textarea {
 .form-field-footer{
   display: flex;
   flex-direction: column;
-  margin-left: 93px;
+  /* margin-left: 93px; */
   width: 448px;
 }
 
